terrafom-task/lab1/sec-group.tf
resource "aws_security_group" "demo-sg" {
  name = "osama-gr"
  description = "Allow HTTP and SSH traffic via Terraform"
  vpc_id = "vpc-0d15826b258284b25"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
